crates/vize_atelier_jsx/tests/snapshots/style__scoped_style_interpolations_are_recovered_with_source_spans.snap
---
source: crates/vize_atelier_jsx/tests/style.rs
expression: "root.scoped_css.as_deref().expect(\"scoped css\")"
---
.box { color: ; border: ; }
