crates/vize_atelier_jsx/tests/snapshots/style__vapor_scoped_style_snapshot.snap
---
source: crates/vize_atelier_jsx/tests/style.rs
expression: vapor_snapshot(&component)
---
## code
import { template as _template } from 'vue';
const t0 = _template("<div data-v-e77e9c25 class=\"box\">hi</div>", true)

export function render(_ctx) {
  const n0 = t0()
  return n0
}

## templates
<div data-v-e77e9c25 class="box">hi</div>
## scoped_style
scope_id: data-v-e77e9c25
css:
.box[data-v-e77e9c25]{
        color: red;
      }
