crates/vize_atelier_jsx/tests/snapshots/style__vdom_scoped_style_snapshot.snap
---
source: crates/vize_atelier_jsx/tests/style.rs
expression: dom_snapshot(&component)
---
## code
export function render(_ctx, _cache) {
  return (_openBlock(), _createElementBlock("div", {
    class: "box",
    "data-v-e77e9c25": ""
  }, "hi"))
}
## scoped_style
scope_id: data-v-e77e9c25
css:
.box[data-v-e77e9c25]{
        color: red;
      }
