crates/vize_atelier_jsx/tests/snapshots/style__vdom_without_scoped_style_snapshot.snap
---
source: crates/vize_atelier_jsx/tests/style.rs
expression: dom_snapshot(&component)
---
## code
export function render(_ctx, _cache) {
  return (_openBlock(), _createElementBlock("div", { class: "box" }, "hi"))
}
## scoped_style
none
